Uploaded image for project: 'ActiveMQ C++ Client'
  1. ActiveMQ C++ Client
  2. AMQCPP-595

ActiveMQMessageProducer sends producer registration async which causes it to miss possible exceptions on creation like security exceptions.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 3.9.2
    • 3.9.3
    • CMS Impl
    • None

    Description

      When creating a producer the ActiveMQMessageProducer sends its producer info asynchronously which can cause it to not propagate exceptions back to the client like Security exceptions and it won't remove itself from the session right away. This should be sent sync so that these errors are propagated correctly to the client.

      Attachments

        Issue Links

          Activity

            People

              tabish Timothy A. Bish
              tabish Timothy A. Bish
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: