https://issues.apache.org/jira/browse/AMQCPP-595

Use sync call to create a producer in order to capture exceptions from
the broker on create